<resources>
    <string name="app_name">MikesInstagram</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="pseudo_app_name">Parstagram</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="takepic_button">TAKE PICTURE</string>
    <string name="post_button">SUBMIT</string>
    <string name="menu_logout">Logout</string>
    <string name="navbar_Profile">Profile</string>
    <string name="navbar_Compose">New Post</string>
    <string name="navbar_Home">Home</string>
    <string name="post_author">Username</string>
    <string name="post_picture">Picture</string>
    <string name="post_description">Type your post</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>