<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_author"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/post_picture"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:text="@string/long_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>