<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minLines="1"
        android:maxLines="10"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:hint="@string/post_description" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/takepic_button" />

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:text="@string/post_button" />

</LinearLayout>